@@ -4,6 +4,7 @@ Collapsing Categories Changelog
     * Truncate post title now working for posts in sub-categories
     * Works much faster now for blogs with many posts
     * Fixed option to show only tags
+    * Fixed previews for style settings
 
 * 0.9.4 (2009.03.09)
     * Fixed issue with multiple instances
